kube-pr/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: characterbuilder-deployment
  labels:
    app: characterbuilder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: characterbuilder
  template:
    metadata:
      labels:
        app: characterbuilder
    spec:
      containers:
      - name: characterbuilder
        image: 144.17.92.12:5000/rileyfinal/characterbuilder:${GITHUB_RUN_ID}
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /otherhealth
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /otherhealth
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
