kube-pr/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: characterbuilderapi-service
spec:
  type: ClusterIP
  selector:
    app: characterbuilderapi
  ports:
    - port: 80
      targetPort: 8080
