kube-pr/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: characterbuilderapi-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: swagger.cryptsandcreatures.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: characterbuilderapi-service
            port:
              number: 80
