kube-pr/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: characterbuilder-ingress
  annotations: 
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production
  ingressClassName: nginx
  rules:
  - host: ${PULL_REQUEST_ID}cryptsandcreatures.alex-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: characterbuilder-service
            port:
              number: 80
